style.css
:root {
  font-family: dosis, sans-serif;
  line-height: 1.5;
  font-weight: 400;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  margin: 0;
  padding: 0;
  display: flex;
  min-width: 380px;
  flex-direction: column;

  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.content {
  display: flex;
  width: 100vw;
  height: 100vh;
  place-items: center;
  background-image: url('/public/background.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 50%;
  justify-content: center;
}

h1 {
  text-align: center;
  font-size: 2.8rem;
  font-weight: 400;
  line-height: 1.1;
  text-transform: uppercase;
  color: #e1e1e1;
  letter-spacing: 15px;
  margin-right: -15px;

  @media only screen and (max-width: 500px) {
    font-size: 2rem;
  }
}

.footer {
  width: 100vw;
  position: absolute;
  display: flex;
  justify-content: right;
  font-size: 0.6rem;
  color: #e1e1e1;
  bottom: 0px;
  margin: 0;
}

.footer-content {
  margin: 0;
  padding: 0.5rem;
}

